--- a/src/app/writing/content/cosmos.mdx
+++ b/src/app/writing/content/cosmos.mdx
@@ -1,12 +1,10 @@
 ---
 title: "Through a Little Blob in the Cosmos"
 date: "2024-29-02"
+description: "Our relationship to planet Earth"
 ---
 
 # Through a Little Blob in the Cosmos
-
-Our relationship to planet Earth
-
 
 Through a little blob in the cosmos, an infinitely-expanding universe had been spanned and within it a small yellow star we now call the Sun ensued gravity upon little rocks of stardust that subsequently formed silicone plates and methane clouds.
 
