--- a/src/app/writing/content/maximize.mdx
+++ b/src/app/writing/content/maximize.mdx
@@ -1,12 +1,8 @@
 ---
 title: "I’d Much Rather Maximize than Optimize"
 date: "2024-29-02"
+description: "a rant about two life's philosophies"
 ---
-
-
-## I’d Much Rather Maximize than Optimize
-
-a rant about two life's philosophies
 
 Optimizing can be derived as a scarcity zero-sum game where you must take from somewhere and put it somewhere else, most notably time and energy. Optimizing usually takes the following form: you have multiple lines of play, i.e career improvement, family time, self-indulgence, and health in which you try to best arrange the following lines during the 24 hours in a day. You can think of optimization as local maximization of activities. That’s how most people live their lives. It creates the illusion of control. When one line breaks, it creates physic entropy in one’s consciousness. Additionally, juggling several activities usually results in a slower compounding effect of any.
 
