--- a/src/app/writing/content/skill-to-business.mdx
+++ b/src/app/writing/content/skill-to-business.mdx
@@ -1,21 +1,18 @@
 ---
 title: "3 Steps to Turn a Skill into a Sellable Business"
 date: "2024-30-01"
+description: "A guide for (younger) people on how to find their craft, and turn it into a sellable business."
 ---
-
-# 3 Steps to Turn a Skill into a Sellable Business
-
-A guide for (younger) people on how to find their craft, and turn it into a sellable business.
 
 In today’s era, seizing the opportunity to build your ideal life and achieve rapid financial growth has never been more accessible. However, amidst the vast sea of online information, I understand the challenge of distilling actionable guidelines. In this article, I present a clear and repeatable three-step process for establishing a profitable entrepreneurial career, without the need to dwell in your garage until you catch the attention of giants like Google.
 
-## P1: Skill Acquisition
+### P1: Skill Acquisition
 
 Many young individuals often ask, “Where do I begin?” Drawing inspiration from the concept of Ikigai, we can break down this age-old question into four vital considerations: what you love to do, what you excel at, the potential for a decent income, and your growth trajectory in that chosen path.
 
 I hated when people answered questions with questions, too. My official answer is: Trust your gut instincts, seek guidance from those ahead of you in your chosen field, and don’t waste time dwelling on whether your decision is right. As you’re about to find out, the world is not a binary place. It’s not that much about making the right decision, it’s about making a decision right. Slaying the startup mojo: fail fast. It’s better to waste 3 months of your life in an experiment of becoming a lawyer than waste a dozen years of formal education only to find out it sucks. The more things you try, the more you’ll gravitate towards a place of Ikigai — a place you genuinely enjoy/are in flow, are of greatest service to others, and get paid for it.
 
-Your Goal here: Monetize a Skill
+Your Goal here: **Monetize a Skill**
 
 Now that you’ve honed your key skill, your objective is to reach a point where you offer substantial value to at least one person — someone who is willing to pay for the knowledge you’ve gained through skill acquisition. But how do you achieve this?
 
@@ -23,7 +20,7 @@ Now that you’ve honed your key skill, your objective is to reach a point where
 - Be wary of positioning. Ask yourself: where is the money? Who is paying what money for what services in this world? Say you’re a photographer: would you rather photograph christening events for $50/event or shoot weddings for $200? Think about it. It’s a very similar skill but a vastly different offer.
 - Don’t stop. For the love of god, don’t stop. Whatever you’re aiming at from personal motivation, is exactly behind the next little step. The 1st step is always the hardest. You’re in a land of unknown unknowns. You’re scared. Every consequential step is going to be easier. Additionally, the more you master the skill, the more fond of it you’ll become.
 
-Photo by Marvin Meyer on Unsplash
+<MDXImage src="/writings/product.png" alt="Skills" />
 
 By doing so you will learn the following:
 
@@ -31,7 +28,7 @@ By doing so you will learn the following:
 - However, the world is also a rather big place. There are millions of companies pledging their value openly in the job marketplace. You can grasp a tiny segment of such markets as an extension of what you love.
 - It can be done! It’s hard, and you wanted to stop, but you didn’t and now you’re here! People are paying you for something you learned on your own. On to the next!
 
-## P2: Agency — Wrapping Skills into a Business
+### P2: Agency — Wrapping Skills into a Business
 
 Hey, heey! You’re onto Step 2. If you’ve come so far, it means you have learned enough to provide real value to people. Step 2 represents your bridge into business. Have you wondered how to merge from skill to entrepreneurship? Allow me to dispose of the magic word: agency.
 
@@ -45,8 +42,6 @@ By definition, an agency is a company that crafts and develops customized soluti
 - Turn a one-man show into involving several other people. Start by looking at your calendar. Where are you spending most of your time that is not productive for the company, i.e., could be done by someone other than yourself to a greater extent? Don’t look for positions to fill; look for problems to solve.
 - Listen, listen, and listen. What are the people you’re targeting saying? Where do their problems lie? Build relationships built on attentiveness and trust. Deliver on your promises.
 
-Photo by Jason Goodman on Unsplash
-
 By doing so you will learn the following:
 
 - The basics of the game of business — the boring stuff — accounting, financial forecasting, HR, admin, documentation. These are golden and cannot be taught at any MBA school.
@@ -59,7 +54,7 @@ Disclaimers:
 - If you find yourself spending more time chasing clients than delivering meaningful work, it may indicate stiff market competition, inadequate niche knowledge, or ineffective exposure.
 - It’s worth noting that venture capital investors typically avoid investing in service-based companies due to limited growth potential.
 
-## P3: Product — Monetizing Skill Without Immediate Effort
+### P3: Product — Monetizing Skill Without Immediate Effort
 
 You’ve come a long way, mastering a skill that others are willing to pay for. You’ve built a profitable agency around that skill, serving as your gateway to entrepreneurship. Now, after gaining a deep understanding of your customers’ needs and the industry’s dynamics, it’s time for the final leap. Many rush into this stage prematurely, but those who patiently work with customers over time develop a profound understanding of the industry — what it values, who pays for what, preferences, dislikes, and future trends. These true warriors can afford to build a product.
 
@@ -77,8 +72,6 @@ Man, oh, man. How in the world do I do that? Building a product requires a diffe
   - Video Editor: Establish an online interface where they get to pick which videos they like most. Instead of using email and long back-and-forth iterations with clients, you can redirect them to your online interface. Hey, that’s an automation!
   - Data Science Consultant: Build a SaaS product where they could run their own experiments and ongoing analysis.
 - Start Charging: Turn those early adopters into early clients. Instead of tracking custom problems, solutions, and invoices, you’ll be doing product customer support and updating the product as you go. The rest is up to you!
-
-Photo by Luke Chesser on Unsplash
 
 By doing so you will learn the following:
 
