logos, hero and villain. what? no villain

--- a/src/app/writing/content/maximize.mdx
+++ b/src/app/writing/content/maximize.mdx
@@ -13,7 +13,7 @@ Maximizing, on the other hand, is an abundance game where the goal is to maximiz
 
 It is misleading to believe success comes from anything but the shear amount of volume at a specific task for an extraordinary amount of time. Productivity is not a hack, because humans are not productivity machines. Thus, the only way to become successful is to exercise discipline in the face of chaos until excellence becomes a habit, not an act. Those who have forged their character through hard work and perseverance do not spend their days meticulously squeezing in 15-minute yoga sessions or other superficial optimizations. Instead, they evaluate their week and eliminate anything that does not align with their long-term vision. True optimization is about knowing what not to do.
 
-I would much rather maximize: I’d rather get ultra drunk and wake at again at 6 in the morning, do the heaviest workout, and go crush the day than optimize my time and enjoyment with friends as well as be gentle about putting in the effort and keeping my balance. That’s a personal life philosophy. I can understand why one might not enjoy a life that extreme.
+I would much rather maximize: I’d rather get ultra drunk and wake at again at 6 in the morning, do the heaviest workout, and go crush the day than be gentle about putting in the effort and keeping my balance. That’s a personal life philosophy. I can understand why one might not enjoy a life that extreme.
 
 Flow — a state in which people are so involved in an activity that nothing else seems to matter is harder achieved when juggling activities.
 
