--- a/src/app/writing/content/skill-to-business.mdx
+++ b/src/app/writing/content/skill-to-business.mdx
@@ -8,16 +8,22 @@ In today’s era, seizing the opportunity to build your ideal life and achieve r
 
 ### P1: Skill Acquisition
 
-Many young individuals often ask, “Where do I begin?” Drawing inspiration from the concept of Ikigai, we can break down this age-old question into four vital considerations: what you love to do, what you excel at, the potential for a decent income, and your growth trajectory in that chosen path.
+Many young individuals often ask, “Where do I begin?” Drawing inspiration from the concept of Ikigai, we can break down this age-old question into 4 vital considerations: what you love to do, what you excel at, the potential for a decent income, and your growth trajectory in that chosen path.
 
-I hated when people answered questions with questions, too. My official answer is: Trust your gut instincts, seek guidance from those ahead of you in your chosen field, and don’t waste time dwelling on whether your decision is right. As you’re about to find out, the world is not a binary place. It’s not that much about making the right decision, it’s about making a decision right. Slaying the startup mojo: fail fast. It’s better to waste 3 months of your life in an experiment of becoming a lawyer than waste a dozen years of formal education only to find out it sucks. The more things you try, the more you’ll gravitate towards a place of Ikigai — a place you genuinely enjoy/are in flow, are of greatest service to others, and get paid for it.
+<MDXImage src="/writings/ikigai.webp" alt="Ikigai" />
+
+I hated when people answered questions with questions, too. Here's what I recommend: trust your gut instincts, seek guidance from those ahead of you in your chosen field, and don’t waste time dwelling on whether your decision is right. As you’re about to find out, the world is not a binary place. It’s not that much about making the right decision, it’s about making a decision right. Slaying the startup mojo: fail fast. It’s better to spend 3 months of your life in a lawyer's office experimenting in becoming a lawyer than waste a dozen years of formal education only to find out it sucks. 
+
+The more things you try, the more you’ll gravitate towards a place of Ikigai — a place you genuinely enjoy/are in flow, are of greatest service to others, and get paid for it. 
+
+Just try more stuff.
 
 Your Goal here: **Monetize a Skill**
 
 Now that you’ve honed your key skill, your objective is to reach a point where you offer substantial value to at least one person — someone who is willing to pay for the knowledge you’ve gained through skill acquisition. But how do you achieve this?
 
 - Pick a niche. In order for people to deem your service valuable, you have to be adorably well-suited to solve a niche set of problems for a niche set of people. In business terms, these people are often referred to as the “target audience.” These are people that share certain characteristics/problems/demands that you can help them mitigate.
-- Be wary of positioning. Ask yourself: where is the money? Who is paying what money for what services in this world? Say you’re a photographer: would you rather photograph christening events for $50/event or shoot weddings for $200? Think about it. It’s a very similar skill but a vastly different offer.
+- Be wary of positioning. Ask yourself: where is the money? Who is paying what money for what services in this world? Say you’re a photographer: would you rather photograph christening events for $50/event or shoot elite weddings for $5000? Think about it. It’s a very similar skill but a vastly different offer.
 - Don’t stop. For the love of god, don’t stop. Whatever you’re aiming at from personal motivation, is exactly behind the next little step. The 1st step is always the hardest. You’re in a land of unknown unknowns. You’re scared. Every consequential step is going to be easier. Additionally, the more you master the skill, the more fond of it you’ll become.
 
 <MDXImage src="/writings/product.png" alt="Skills" />
