--- a/src/app/writing/content/jan17-thoughts.mdx
+++ b/src/app/writing/content/jan17-thoughts.mdx
@@ -4,13 +4,13 @@ date: "2025-17-01"
 description: "collection of thoughts"
 ---
 
-- Today’s computing: networks of multicore clusters — shared memory among processors within a chip. Message passing among machines in a cluster. Network protocols among clusters.
-- Speed is not determinant of company's success, it is velocity, speed in a given direction.
+- Today’s computing: networks of multicore clusters: network protocols among clusters, message passing among machines in a cluster, shared memory among processors within a chip.
+- Speed is not determinant of company's success. It is velocity, speed in a given direction.
 - The work is in the preparation: Life is like a marathon, 90% of the work is done before the event itself, the real work is in the prep. The countless hours of training, research, practice that leads to you being ready. Do not skip the prep.
 - Early distribution → start with a wide funnel & maximize views -> signups. With traction, you’ll identify who sees your product as indispensable, & that’s where you build meaningful retention.
 - Science is prove it, and I’ll believe you. Faith is believe it, and I will prove you.
 - Your brain is not merely a record of the past, it’s also the map of the future. It goes where attention flows.
-- Warren Buffett about hiring: we look for intelligence, energy, and integrity. And if they don’t have the last, forget about the 1st two.
+- What I look for in people: high integrity, high intelligence, high energy, lowest of expectations for what life should be. 
 - Boys are interested in games and objects while girls are interested in people and relationships.
 - You can’t actually train for 5 hours straight. There’s not enough muscle volume to be exerted. On the chest, you can do like 9 series, 12 each, and you’re done.
     - Building muscle is oddly a capped game — but there’s still so much you can maximize — sleep, diet, training technique.
