--- a/src/app/writing/content/jan17-thoughts.mdx
+++ b/src/app/writing/content/jan17-thoughts.mdx
@@ -6,25 +6,23 @@ description: "collection of thoughts"
 
 - Today’s computing: networks of multicore clusters: network protocols among clusters, message passing among machines in a cluster, shared memory among processors within a chip.
 - Speed is not determinant of company's success. It is velocity, speed in a given direction.
-- The work is in the preparation: Life is like a marathon, 90% of the work is done before the event itself, the real work is in the prep. The countless hours of training, research, practice that leads to you being ready. Do not skip the prep.
 - Early distribution → start with a wide funnel & maximize views -> signups. With traction, you’ll identify who sees your product as indispensable, & that’s where you build meaningful retention.
 - Science is prove it, and I’ll believe you. Faith is believe it, and I will prove you.
 - Your brain is not merely a record of the past, it’s also the map of the future. It goes where attention flows.
 - What I look for in people: high integrity, high intelligence, high energy, lowest of expectations for what life should be. 
 - Boys are interested in games and objects while girls are interested in people and relationships.
-- You can’t actually train for 5 hours straight. There’s not enough muscle volume to be exerted. On the chest, you can do like 9 series, 12 each, and you’re done.
-    - Building muscle is oddly a capped game — but there’s still so much you can maximize — sleep, diet, training technique.
+- You can’t actually train for 5 hours straight. There’s not enough muscle volume to be exerted. Building muscle is oddly a capped game — but there’s still so much you can maximize — sleep, diet, training technique.
 - You have to start forgiving people, starting with yourself, because they didn’t know better, and neither did you. You acted based on what you knew. Before we can judge each other, we must understand each other. And once we understand each other, we will not be able to judge.
 - The Sun’s own gravity is so strong atoms in Sun’s core clash nuclei together — helium from hydrogen(fusion) — and that’s why it’s so hot — because heat is just molecules moving fast.
 - I believe that on a long-enough time frame you will be given what you deserve. Some may call it karma.
-- By watching some of the masters of their crafts, I have learned that the game is always 100% mental. They are in fact masters of the internal self-dialogue. There is nowhere their mind cannot go. What successful people have in common is an unbreakable mindset - the narrative they tell themselves during each situation is a winner's one. Some people find every opportunity to come up with an excuse, some every obstacle to win.
+- By watching some of the masters of their crafts(business, fitness, tech, art), I have learned that the game is always 100% mental. They are in fact masters of the internal self-dialogue. There is nowhere their mind cannot go. What successful people have in common is an unbreakable mindset - the narrative they tell themselves during each situation is a winner's one. Some people find every opportunity to come up with an excuse, some every obstacle to win.
 - When choosing what to do, people often neglect the value of working at the edge of your intellectual capacity. That factor alone will bring your fulfilment.
 - I think a good goal to strive for in life is to have the freedom to be yourself in all situations; to never wear a mask for anyone. Seems authentic in theory, but you do serve different roles to different people.
 - Moving water truly does have a hypnotic charm.
 - Life is whatever you want it to be. You can make your mind believe anything. We’re all trying to make some sense of it. You might as well convince your mind to live a life of abundance, happiness, success, impact, tremendous joy, laughter, and experience. Anyway, that’s what I’m choosing to believe. It’s what has created this life I have.
 - I feel people who’ve never done anything spend years petrified making a move and when they do, it doesn’t match their ideal expectations and they quit. Really, they’re scared of what people will say of them if they commit and fail.
 - RAG is just putting up the user query in the same embedding space as the vectors in a document (vector db's) and finding top matches (top_k).
-- I can understand why people born into wealth find their lives meaningless. It’s because their characters hadn’t experienced the other side of the spectrum. There is no light without the dark. I can walk into any beach bar in the world and be absolutely amazed at every single detail of what my eyes capture — from the way the bar’s wooden shafts were built, the way the light reflects the waitresses sunglasses to the way the sea sparkles back at me. I’m in absolute awe. I’m alive.
+- I can understand why people born into wealth find their lives meaningless. It’s because their characters hadn’t experienced the other side of the spectrum. They can attribute no meaning to their suffering. There is no light without the dark. I can walk into any beach bar in the world and be absolutely amazed at every single detail of what my eyes capture — from the way the bar’s wooden shafts were built, the way the light reflects the waitresses sunglasses to the way the sea sparkles back at me. I’m in absolute awe. I’m alive.
 - The first step to being an adult is recognizing you and only you can take care of yourself. The second step is understanding you are also the sole person responsible for your happiness.
 - People wish you what they think is best for you.
 - Religion is people making sense of the world — a moral set of principles — a compass. But if it helps you, good for you. Who am I to judge your faith? I am of the belief that if your faith makes you a more functional human being, I allow you your faith whatever it is.
