--- a/src/app/writing/content/cosmos.mdx
+++ b/src/app/writing/content/cosmos.mdx
@@ -4,7 +4,7 @@ date: "2024-29-02"
 description: "Our relationship to planet Earth"
 ---
 
-Through a little blob in the cosmos, an infinitely-expanding universe had been spanned and within it a small yellow star we now call the Sun ensued gravity upon little rocks of stardust that subsequently formed silicone plates and methane clouds.
+Through a little blob in the cosmos, an infinitely-expanding universe had been unfurled and within it a small yellow star we now call the Sun ensued gravity upon little rocks of stardust that subsequently formed silicone plates and methane clouds.
 
 Among these is the Earth — the little blue planet we so tightly grasp on. Inside the blueish waters, simple organic molecules gradually assembled, leading to the formation of self-replicating entities. Life emerged. Sporadic waters filled with prokaryotic bacteria exploded. Around 3 billion years ago, these prokaryotes learned to harness sunlight to extract oxygen and water — a process we now know as photosynthesis.
 
@@ -12,6 +12,6 @@ Then, the 2nd miracle happened — eukaryotes. DNA and cytoplasms from multiple 
 
 We know so little, yet have been able to cope with the world to the point of mastery. We have largely prevailed so quickly due to our cooperativeness. No other animal has been able to conclude such a level of high-functioning collaboration among all of its race members. Our survival has been dependent on the human brain to restore order in consciousness, to assure the spirit of its success against battling the cosmic disorder. We do so by deducing narratives about the world we live in. Stories, we call them. Our brain conducts them in order to protect itself. Despite our genetic and social makeup resemblance, each mind has designed an ego to protect itself against survival. Ironically, you could argue with yourself as both minds would enter different flows of consciousness and travel far lengths to protect its own self-image.
 
-Eternal grace can only be derived from the notion that we are incredibly lucky to consciously witness what the universe has manifested. To kiss your wife, to watch a comedy show, to cry, to run, to be hurt, to read, to think. And to tell other people you’re just as oblivious as they are about the vast majority of things. And that’s okay.
+Eternal grace can only be derived from the notion that we are incredibly lucky to consciously witness what the universe has manifested. To watch a comedy show, to cry, to run, to be hurt, to read, to think. And to tell other people you’re just as oblivious as they are about the vast majority of things. And that’s okay.
 
 To you, little blue planet. Thank you.
