--- a/src/app/writing/content/cosmos.mdx
+++ b/src/app/writing/content/cosmos.mdx
@@ -14,4 +14,4 @@ We know so little, yet have been able to cope with the world to the point of mas
 
 Eternal grace can only be derived from the notion that we are incredibly lucky to consciously witness what the universe has manifested. To watch a comedy show, to cry, to run, to be hurt, to read, to think. And to tell other people you’re just as oblivious as they are about the vast majority of things. And that’s okay.
 
-To you, little blue planet. Thank you.
+To you - little blue planet.
